objects/Procedure_Information__c.object
<CustomObject>
    <description>Junction object between Campaign and Procedure object</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Procedure Informations</relationshipLabel>
        <relationshipName>Procedures_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <formula>ICD_CPT_Procedures__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupIdentifier__c</fullName>
        <formula>ICD_CPT_Procedures__r.GroupIdentifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroupIdentifier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICD_CPT_Procedures__c</fullName>
        <label>ICD/CPTProcedures</label>
        <referenceTo>Procedures__c</referenceTo>
        <relationshipLabel>Procedure Informations</relationshipLabel>
        <relationshipName>Procedures_Informations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <formula>ICD_CPT_Procedures__r.LongDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Long Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <formula>ICD_CPT_Procedures__r.ShortDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Procedure__c</fullName>
        <formula>Text(ICD_CPT_Procedures__r.Type_Of_Procedure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Of Procedure</label>
        <type>Text</type>
    </fields>
    <label>Procedure Information</label>
    <nameField>
        <displayFormat>PRO INFO-{0000000}</displayFormat>
        <label>Procedure Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedure Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>